Fix squished avatar image

--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -47,6 +47,7 @@
 
     .welcome-image {
       margin-right: 30px;
+      flex-shrink: 0;
     }
 
     .welcome-description {
